--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 /* White text throughout */
 
 body {
-  font-family: "lato", sans-serif;
+  font-family: "benny-black", sans-serif;
   color: red;
 }
 
@@ -41,9 +41,12 @@ p {
 
 /* All images must not be larger than parent container */
 img {
-  width: 80%;
+  width: 50%;
 }
-
+.logo{
+  max-width: 10%;
+  min-width: 120px;
+}
 /* No styling on list items */
 li {
   list-style-type: none;
@@ -64,7 +67,7 @@ p {
 }
 
 .navbar {
-  background-color:rgb(254, 250, 206);
+  background-color: white;
   height: 70px;
   padding: 0 30px;
   border-width: 5px;
@@ -73,7 +76,7 @@ p {
 }
 .navbar h1 {
   font-size: 30px;
-  font-weight: 300;
+  font-weight: 3000;
   margin: 10px 0;
   line-height: 1.2;
 }
@@ -118,11 +121,12 @@ p {
 .grid {
   overflow: visible;
   display: grid;
-  grid-template-columns: 60% 40%;
+  grid-template-columns: 60% 20% 20%;
 }
 
 .grid-item-1,
-.grid-item-2 {
+.grid-item-2,
+.grid-item-3 {
   position: relative;
   top: 50px;
 }
@@ -260,4 +264,20 @@ footer {
 footer a {
   color: white;
   margin: 0 10px;
+}
+
+.landing{
+  width: 100%;
+  height: 680px;
+  border: 1px solid #2d2d2d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.landing div {
+  color: #fff;
+  background: #2d2d2d;
+
+
 }
