--- a/konbini-style.css
+++ b/konbini-style.css
@@ -43,3 +43,27 @@ header img{
 .top-left, .top-center, .top-right{
   display: flex;
 }
+
+.container {
+  margin: 0 auto;
+  max-width: 1200px;
+  overflow: visible;
+}
+
+.grid {
+  overflow: visible;
+  display: grid;
+  grid-template-columns: 60% 20% 20%;
+}
+
+.showcase {
+  height: 300px;
+  background-color: rgb(254, 250, 206);
+}
+
+.grid-item-1,
+.grid-item-2,
+.grid-item-3 {
+  position: relative;
+  top: 50px;
+}
