--- a/konbini-style.css
+++ b/konbini-style.css
@@ -169,3 +169,17 @@ footer{
 footer a {
   color: white
 }
+.about-about{
+  width:80%
+}
+.about-list{
+  text-align: right;
+  list-style: none;
+  padding-right: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  color:rgb(246, 177, 59)
+}
+.about-list li {
+  padding-top: 23px;
+}
