--- a/konbini-style.css
+++ b/konbini-style.css
@@ -124,7 +124,7 @@ header img{
 .about-grid {
   overflow: visible;
   display: grid;
-  grid-template-columns: 10% 50% 40%;
+  grid-template-columns: 10% 60% 30%;
 }
 
 .about-grid-1,
@@ -183,4 +183,56 @@ footer a {
 }
 .about-list li {
   padding-top: 23px;
+}
+
+.collection {
+  padding-top: 30px;
+  display: grid;
+  grid-auto-columns: max-content;
+  grid-auto-flow: dense;
+  grid-auto-rows: minmax(100px, auto);
+  grid-gap: 25px;
+  grid-template-columns: repeat(3, 1fr);
+
+  //--- JUST VISUAL STYLING BELOW
+    margin: 60px auto;
+    max-width: 800px;
+}
+
+.product {
+
+//--- JUST VISUAL STYLING BELOW
+  &__image {
+    background-color: #e5e5e5;
+    display: block;
+    min-height: 200px;
+    width: 100%;
+  }
+
+  &__name {
+
+    p {
+      font-family: sans-serif;
+      font-size: 16px;
+      font-weight: bold;
+
+      a {
+        color: #000000;
+        text-decoration: none;
+      }
+    }
+  }
+
+  &__price {
+
+    p {
+      font-family: sans-serif;
+      font-size: 14px;
+    }
+  }
+}
+
+.product img{
+  width: 120px;
+  height: 100px;
 }
