--- a/konbini-style.css
+++ b/konbini-style.css
@@ -117,14 +117,14 @@ header img{
 }
 
 .about {
-  height: 300px;
+  height: 250px;
   background-color: rgba(6, 75, 179, 0.62);
   padding: 10px
 }
 .about-grid {
   overflow: visible;
   display: grid;
-  grid-template-columns: 10% 60% 30%;
+  grid-template-columns:  70% 30%;
 }
 
 .about-grid-1,
@@ -152,7 +152,7 @@ header img{
 
 }
 .mid{
-  height:250px
+  height:300px
 }
 .kon-footer{
   height: 75px;
