--- a/konbini-style.css
+++ b/konbini-style.css
@@ -117,7 +117,7 @@ header img{
 }
 
 .about {
-  height: 250px;
+  height: 300px;
   background-color: rgba(6, 75, 179, 0.62);
   padding: 10px
 }
@@ -236,4 +236,11 @@ footer a {
 .product img{
   width: 120px;
   height: 100px;
+}
+.product:hover{
+  text-decoration: underline;
+  font-weight: bold;
+}
+.product__name:hover {
+  text-decoration: underline;
 }
